# cfb-betting-model

./: .env.example  .env.save  .gitignore  .pre-commit-config.yaml  ATS_IMPROVEMENT_RECOMMENDATIONS.md  FEATURE_IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt  run.sh
.devcontainer/: devcontainer.json
QA Testing/: ATS_ACCURACY_DROP_ANALYSIS.md  QA_Analysis_Report.md  QA_Analysis_Report_v2.md  QA_Analysis_Report_v3.md  QA_Analysis_Report_v4.md  V6_FIXES_SUMMARY.md  Week12test1_data.xlsx
docs/: FEATURE_IMPROVEMENTS_ANALYSIS.md  FEATURE_WEIGHTING_EXPLANATION.md  MARKET_DATA_UPDATE_GUIDE.md  QUICK_START.md  RECALIBRATION_SUMMARY.md
reports/: 2024_w11_picks.csv  2024_w11_picks.md  2024_w13_picks.csv  2024_w13_picks.md  2024_w1_picks.csv  2025_w11_picks.csv  2025_w11_picks.md  2025_w12_picks.csv  2025_w12_picks.md  2025_w12_picks_export_v2.xlsx  2025_w12_picks_export_v3.xlsx  2025_w12_picks_export_v6.xlsx  2025_w13_picks.csv  2025_w13_picks.md  2025_w13_picks_export_v11.xlsx  2025_w13_picks_export_v12.xlsx  2025_w13_picks_export_v13.xlsx  2025_w13_picks_export_v7.xlsx  2025_w13_picks_export_v8.xlsx  2025_w13_picks_export_v9.xlsx  2025_w13_picks_export_v9_formatted.xlsx  2025_w14_picks.csv  2025_w14_picks.md  2025_w1_picks.csv  2025_w4_picks.csv  2025_w6_picks.csv  HISTORICAL_BACKTEST_2014_2024.md  HISTORICAL_BACKTEST_2014_2024_V4.md  backtest_2014_2024.csv  backtest_2014_2025.csv  backtest_2024_2024.csv  backtest_2025_2025.csv  model_verification.md  weekly_backtest_breakdown_2015_2025.csv  weekly_hit_rates_formatted.csv
scripts/: check_favs.py  grade_v12.py  (+6 more)
(+98 files in other folders)
